src/App.css
@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0");

*, *::before, *::after {
	box-sizing: border-box;
}

img {
	width: 100%;
	max-width: inherit;
}

.container {
	--HEADER_HEIGHT: 64px;
	margin: 0 auto;
	display: flex;
	flex-direction: column;
	max-height: calc(100vh - 88px);
}
.container > div {
	flex: 1;
}

header {
	border-bottom: 1px solid #808080;
	padding: 1em;

	width: 100%;
	height: var(--HEADER_HEIGHT);
	display: flex;
	justify-content: space-between;
	align-items: center;
}
header h1 {
	margin: 0;
	font-size: 1rem;
}
.info {
	display: none;
}
.info img {
	width: 24px;
}


.editor-container {
	position: relative;
}

.editor-container .toggle-expand-btn {
	position: absolute;
	right: .5rem;
	top: .5rem;

	border: none;
	cursor: pointer;

	transition: transform .15s ease;
	z-index: 999;
}
#maximizer:checked + .toggle-expand-btn {
	transform: rotate(90deg);
}

.editor-container textarea {
	resize: none;
	display: block;
	width: 100%;
	height: calc(30vh - 4px);
}
#maximizer:checked ~ #editor {
	position: fixed;
	top: 0; left: 0;
	height: calc(100vh + 4px);
}

.preview-container {
	max-height: 100vh;
	overflow-y: scroll;
}
/* https://github.com/sindresorhus/github-markdown-css#usage */
.markdown-body {
	box-sizing: border-box;
	min-width: 200px;
	max-width: 980px;
	margin: 0 auto;
	padding: 1rem;
}

@media screen and (min-width: 640px) {
	header {
		width: 100%;
	}
	header h1 {
		font-size: 1.25rem;
	}

	.editor-container {
		gap: 1rem;
	}
	.editor-container textarea {
		height: calc(100vh - 4px);
		border: none;
	}
	.editor-container .toggle-expand-btn {
		display: none;
	}

	.container {
		flex-direction: row;
		gap: 1rem;
	}

	.markdown-body {
		padding: 0;
	}
}

